--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -1,10 +1,10 @@
 source "http://rubygems.org"
 
-ruby '2.5.3'
+ruby '2.6.1'
 
 group :test do
-  gem 'rack-test'
-  gem 'rspec'
-  gem 'rspec_junit_formatter'
-  gem 'shoulda-matchers', '~> 3.1'
+  gem 'rack-test', '~> 1.1'
+  gem 'rspec', '~> 3.8'
+  gem 'rspec_junit_formatter', '~> 0.4.1'
+  gem 'shoulda-matchers', '~> 4.0', '>= 4.0.1'
 end
